--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "esbuild": "^0.17.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
     "sass": "^1.58.0"
   },
   "scripts": {
